# fastapi-minio

./: .env.template  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py
app/database/: minio.py
app/repositories/: minio.py
app/routers/: __init__.py  minio.py
app/services/: minio.py
docker/fastapi/: Dockerfile
