[project]
name = "fastapi-minio"
version = "0.1.0"
description = "FastAPI template with MinIO."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Carlos Andreo", email = "c.andreo@uma.es" }]

[dependency-groups]
prod = [
  "fastapi[standard]==0.115.12",
  "minio==7.2.15",
  "pydantic-settings==2.9.1",
]
lint = [
  "ruff==0.11.8",
]

[tool.uv]
default-groups = ["prod"]
