[project]
name = "fastapi-minio"
version = "0.1.0"
description = "FastAPI template with MinIO."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Carlos Andreo", email = "c.andreo@uma.es" }]

[dependency-groups]
prod = [
  "fastapi[standard]==0.116.1",
  "minio==7.2.16",
  "pydantic-settings==2.10.1",
]
lint = [
  "ruff==0.13.0",
]

[tool.uv]
default-groups = ["prod"]
